www/assets/css/main.css
/* ... */
main {
  flex-grow: 1;
}

footer{
  margin-top: auto;
}

.container {
  margin-bottom: 3rem;
}

.header {
  display: flex;
  margin: auto 0 2rem 0;
}

.header-login-btn {
  margin-top: 2rem;
  align-items: center;
}

.logo_img {
  width: 240px;
}

.header-login-btn {
  display: flex;
  align-items: start;
  justify-content: flex-end;
}

.button {
  margin-left: 1rem;
}

/* Custom color */
.button-black {
  background-color: black;
  border-color: black;
}
.button-black.button-clear,
.button-black.button-outline {
  background-color: transparent;
  color: black;
}
.button-black.button-clear {
  border-color: transparent;
}

/* Custom size */
.button-small {
  font-size: .8rem;
  height: 2.8rem;
  line-height: 2.8rem;
  padding: 0 1.5rem;
}

.button-large {
  font-size: 16px;
  height: 4.5rem;
  line-height: 4.5rem;
  padding: 0 2rem;
}

textarea {
  resize: none;
}

[type="text"],
select,
textarea {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  font-weight: 400;
}

#ticket {
  border: 1px solid #9b4dca;
  border-radius: 5px;
  padding: 20px;
  margin-bottom: 25px;
}

.ticket-details-title {
  display: flex;
  align-items: center;
  font-size: 25px;
  gap: 10px;
  margin-bottom: 15px;
}

.ticket-details-span {
  font-weight: normal;
}

.ticket-list-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

